<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ejercicio2_2</string>
    <string name="txtValor1">Introduce un valor:</string>
    <string name="action_settings">Settings</string>
    <string name="txtValor2">Introduce otro valor:</string>
    <string name="rBSumar">Sumar</string>
    <string name="rBRestar">Restar</string>
    <string name="btnCalcular">Calcular</string>
    <string name="txtResultado">Resultado:</string>

</resources>
